refact: move to jdk 25 with some cleaning